# python-poetry-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/app_logging/: config.json  filters.py  formatters.py  setup.py
logs/: README.md
