[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
repository = "https://github.com/DmitriySevkovych/python-poetry-template"
description = "Template for Python projects with the Poetry package manager"
authors = ["Dmitriy Sevkovych <dmitriy@sevkovych.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
tomli = "^2.0.1"
ipykernel = "^6.27.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
typing-extensions = "^4.11.0"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
